force-app/main/default/objects/Assumption__c/Assumption__c.object-meta.xml
<CustomObject>
    <label>Assumption</label>
    <nameField>
        <displayFormat>ASS-{0000000}</displayFormat>
        <label>Assumption Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assumptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>