force-app/main/default/objects/Assumption__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Governance</fullName>
            </value>
            <value>
                <fullName>Requirements</fullName>
            </value>
            <value>
                <fullName>Readiness</fullName>
            </value>
            <value>
                <fullName>Integrations</fullName>
            </value>
            <value>
                <fullName>3rd Parties</fullName>
            </value>
            <value>
                <fullName>Licenses</fullName>
            </value>
            <value>
                <fullName>Org</fullName>
            </value>
            <value>
                <fullName>System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>