force-app/main/default/objects/Assumption__c/fields/Assumption__c.field-meta.xml
<CustomField>
    <fullName>Assumption__c</fullName>
    <label>Assumption</label>
    <length>255</length>
    <type>Text</type>
</CustomField>