force-app/main/default/objects/Assumption__c/fields/Risk_to_Project__c.field-meta.xml
<CustomField>
    <fullName>Risk_to_Project__c</fullName>
    <label>Risk to Project</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>