force-app/main/default/objects/Assumption__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Assumption__c</columns>
    <columns>Risk_to_Project__c</columns>
    <columns>Area__c</columns>
    <columns>Project__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>